// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Column And Row Headers 1`] = `
<table
  data-hover="true"
  data-color="accent"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <caption style="font-size: var(--ds-font-size-3); caption-side: bottom; text-align: center; font-weight: normal; margin-top: var(--ds-size-2);">
    Svarprosent for elevundersøkelsen nasjonalt
  </caption>
  <thead>
    <tr>
      <td>
      </td>
      <th scope="col">
        2022–23
      </th>
      <th scope="col">
        2023–24
      </th>
      <th scope="col">
        2024–25
      </th>
    </tr>
  </thead>
  <tbody style="text-align: right;">
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        8. trinn
      </th>
      <td>
        88,5%
      </td>
      <td>
        86,3%
      </td>
      <td>
        85,3%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        9. trinn
      </th>
      <td>
        88,7%
      </td>
      <td>
        86,3%
      </td>
      <td>
        84,9%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        10. trinn
      </th>
      <td>
        89,7%
      </td>
      <td>
        87,3%
      </td>
      <td>
        85,7%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Vg1
      </th>
      <td>
        84,8%
      </td>
      <td>
        82,8%
      </td>
      <td>
        83,1%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Vg2
      </th>
      <td>
        82,5%
      </td>
      <td>
        80,0%
      </td>
      <td>
        80,3%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Vg3
      </th>
      <td>
        79,9%
      </td>
      <td>
        75,7%
      </td>
      <td>
        76,9%
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Fixed Table 1`] = `
<div>
  <table
    id="myTable"
    style="table-layout: fixed; margin-bottom: 12px;"
  >
    <caption>
      Tildeling skolebibliotek 2024
    </caption>
    <thead>
      <tr>
        <th>
          Kommune
        </th>
        <th>
          Tildeling (kr)
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Bjerkreim kommune
        </td>
        <td style="font-feature-settings: &quot;tnum&quot;;">
          330 000
        </td>
      </tr>
      <tr>
        <td>
          Færder kommune
        </td>
        <td style="font-feature-settings: &quot;tnum&quot;;">
          750 000
        </td>
      </tr>
      <tr>
        <td>
          Gjøvik kommune
        </td>
        <td style="font-feature-settings: &quot;tnum&quot;;">
          150 000
        </td>
      </tr>
      <tr>
        <td>
          Hurdal kommune
        </td>
        <td style="font-feature-settings: &quot;tnum&quot;;">
          550 000
        </td>
      </tr>
      <tr>
        <td>
          Marker kommune
        </td>
        <td style="font-feature-settings: &quot;tnum&quot;;">
          900 000
        </td>
      </tr>
    </tbody>
  </table>
  <nav aria-label="Sidenavigering">
    <ul>
      <li>
        <button
          aria-disabled="true"
          data-variant="tertiary"
          type="button"
          aria-label="Forrige side"
        >
          Forrige
        </button>
      </li>
      <li>
        <button
          data-variant="primary"
          type="button"
          aria-label="Side 1"
          aria-current="page"
        >
          1
        </button>
      </li>
      <li>
        <button
          data-variant="tertiary"
          type="button"
          aria-label="Side 2"
        >
          2
        </button>
      </li>
      <li>
        <button
          data-variant="tertiary"
          type="button"
          aria-label="Side 3"
        >
          3
        </button>
      </li>
      <li>
        <button
          aria-disabled="false"
          data-variant="tertiary"
          type="button"
          aria-label="Neste side"
        >
          Neste
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Multiple Header Rows 1`] = `
<table
  data-zebra="true"
  data-color="support1"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <thead>
    <tr>
      <td>
      </td>
      <th
        colspan="5"
        style="text-align: center;"
      >
        Trives du på skolen?
      </th>
    </tr>
    <tr>
      <td>
      </td>
      <th>
        Trives ikke i det hele tatt
      </th>
      <th>
        Trives ikke noe særlig
      </th>
      <th>
        Trives litt
      </th>
      <th>
        Trives godt
      </th>
      <th>
        Trives svært godt
      </th>
    </tr>
  </thead>
  <tbody style="text-align: right;">
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Idrettsfag
      </th>
      <td>
        0,5%
      </td>
      <td>
        1,0%
      </td>
      <td>
        5,7%
      </td>
      <td>
        46,0%
      </td>
      <td>
        46,9%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Medier og kommunikasjon
      </th>
      <td>
        1,2%
      </td>
      <td>
        1,9%
      </td>
      <td>
        11,3%
      </td>
      <td>
        49,4%
      </td>
      <td>
        36,1%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Musikk, dans og drama
      </th>
      <td>
        -
      </td>
      <td>
        -
      </td>
      <td>
        7,0%
      </td>
      <td>
        41,9%
      </td>
      <td>
        49,8%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Studiespesialisering
      </th>
      <td>
        1,2%
      </td>
      <td>
        1,8%
      </td>
      <td>
        8,9%
      </td>
      <td>
        49,8%
      </td>
      <td>
        38,3%
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Preview 1`] = `
<table data-color="neutral">
  <caption>
    Sensur FSP6236 Tegnspråk III
  </caption>
  <thead>
    <tr>
      <th>
        <div>
          <input
            aria-label="Velg alle ansatte"
            id="checkbox-select-all"
            type="checkbox"
            value
            name="my-checkbox"
          >
        </div>
      </th>
      <th aria-sort="none">
        <button type="button">
          Navn
        </button>
      </th>
      <th>
        E-post
      </th>
      <th>
        Status
      </th>
      <th>
        Besvarelser
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-1"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="1"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Rita Nordmann
      </td>
      <td>
        rita@nordmann.no
      </td>
      <td>
        <span data-color="info">
          I arbeid
        </span>
      </td>
      <td style="text-align: right;">
        19
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-2"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="2"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Kari Nordmann
      </td>
      <td>
        kari@nordmann.no
      </td>
      <td>
        <span data-color="success">
          Ferdig
        </span>
      </td>
      <td style="text-align: right;">
        0
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-3"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="3"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Ola Nordmann
      </td>
      <td>
        ola@nordmann.no
      </td>
      <td>
        <span data-color="info">
          I arbeid
        </span>
      </td>
      <td style="text-align: right;">
        14
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-4"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="4"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Kai Nordmann
      </td>
      <td>
        kai@nordmann.no
      </td>
      <td>
        <span data-color="warning">
          Ikke begynt
        </span>
      </td>
      <td style="text-align: right;">
        35
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-5"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="5"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Mateo Nordmann
      </td>
      <td>
        mateo@nordmann.no
      </td>
      <td>
        <span data-color="success">
          Ferdig
        </span>
      </td>
      <td style="text-align: right;">
        0
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td colspan="4">
        Totalt gjenstår
      </td>
      <td style="text-align: right;">
        68
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`Sortable 1`] = `
<table>
  <thead>
    <tr>
      <th aria-sort="none">
        <button type="button">
          Navn
        </button>
      </th>
      <th>
        Epost
      </th>
      <th aria-sort="none">
        <button type="button">
          Telefon
        </button>
      </th>
      <th aria-sort="none">
        <button type="button">
          Rolle
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Rita Nordmann
      </td>
      <td>
        rita@nordmann.no
      </td>
      <td>
        22345678
      </td>
      <td>
        Rektor
      </td>
    </tr>
    <tr>
      <td>
        Kari Nordmann
      </td>
      <td>
        kari@nordmann.no
      </td>
      <td>
        87654321
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Ola Nordmann
      </td>
      <td>
        ola@nordmann.no
      </td>
      <td>
        32345678
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Kai Nordmann
      </td>
      <td>
        kai@nordmann.no
      </td>
      <td>
        62353278
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Mateo Nordmann
      </td>
      <td>
        mateo@nordmann.no
      </td>
      <td>
        12345678
      </td>
      <td>
        Ass. rektor
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Sticky Header 1`] = `
<h2 style="margin-bottom: var(--ds-size-3);">
  Ansattes utdanning fordelt på eiertype (ordinære), 2021
</h2>
<div style="height: 420px; width: 580px; overflow: auto; padding: 0px;">
  <table
    data-sticky-header="true"
    data-zebra="true"
    tabindex="0"
    data-color="support1"
    data-tinted-column-header="true"
    data-tinted-row-header="true"
  >
    <thead>
      <tr>
        <td>
        </td>
        <th>
          5 store
        </th>
        <th>
          Andre kjeder
        </th>
        <th>
          Frittstående
        </th>
        <th>
          Kommune
        </th>
        <th>
          Totalt
        </th>
      </tr>
    </thead>
    <tbody style="text-align: right;">
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Barnehagelærer
        </th>
        <td>
          42,9%
        </td>
        <td>
          42,9%
        </td>
        <td>
          43,8%
        </td>
        <td>
          43,9%
        </td>
        <td>
          43,6%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Annen pedagogisk utdanning
        </th>
        <td>
          1,9%
        </td>
        <td>
          2,8%
        </td>
        <td>
          2,0%
        </td>
        <td>
          1,3%
        </td>
        <td>
          1,7%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Annen høyere utdanning
        </th>
        <td>
          2,2%
        </td>
        <td>
          2,7%
        </td>
        <td>
          2,2%
        </td>
        <td>
          1,2%
        </td>
        <td>
          1,8%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Barne- og ungdomsarbeider
        </th>
        <td>
          15,0%
        </td>
        <td>
          16,4%
        </td>
        <td>
          18,4%
        </td>
        <td>
          27,7%
        </td>
        <td>
          22,3%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Annet fagarbeider
        </th>
        <td>
          5,2%
        </td>
        <td>
          4,6%
        </td>
        <td>
          5,3%
        </td>
        <td>
          5,3%
        </td>
        <td>
          5,2%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Annen bakgrunn
        </th>
        <td>
          32,8%
        </td>
        <td>
          30,5%
        </td>
        <td>
          28,3%
        </td>
        <td>
          20,6%
        </td>
        <td>
          25,5%
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`With Border 1`] = `
<div style="display: grid; gap: 1rem;">
  <table
    data-border="true"
    data-color="support2"
    data-tinted-column-header="true"
    data-tinted-row-header="true"
  >
    <thead>
      <tr>
        <th>
          Navn
        </th>
        <th>
          Rolle
        </th>
        <th>
          Epost
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Rita Nordmann
        </td>
        <td>
          Rektor
        </td>
        <td>
          rita@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Kari Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          kari@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Ola Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          ola@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Kai Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          kai@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Mateo Nordmann
        </td>
        <td>
          Ass. rektor
        </td>
        <td>
          mateo@nordmann.no
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`With Form Elements 1`] = `
<table>
  <thead>
    <tr>
      <th>
        <div>
          <input
            aria-label="Select all"
            id="components-table--with-form-elements-selectAll"
            type="checkbox"
            value
            name="components-table--with-form-elements-checkboxGroup"
          >
        </div>
      </th>
      <th>
        nr.
      </th>
      <th>
        Spørsmål
      </th>
      <th>
        Alternativ 1
      </th>
      <th>
        Alternativ 2
      </th>
    </tr>
  </thead>
  <tbody style="place-content: start center; align-items: center;">
    <tr>
      <td>
        <div>
          <input
            aria-label="Check 1"
            id="components-table--with-form-elements-select1"
            type="checkbox"
            value="1"
            name="components-table--with-form-elements-checkboxGroup"
          >
        </div>
      </td>
      <td>
        1.
      </td>
      <td style="min-width: 200px;">
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-1"
              id="components-table--with-form-elements-textfield1-1"
              type="text"
              value="Trives du på skolen?"
            >
          </div>
        </div>
      </td>
      <td style="min-width: 200px;">
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-2"
              id="components-table--with-form-elements-textfield1-2"
              type="text"
              value="Trives ikke noe særlig"
            >
          </div>
        </div>
      </td>
      <td style="min-width: 200px;">
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-3"
              id="components-table--with-form-elements-textfield1-3"
              type="text"
              value="Trives godt"
            >
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            aria-label="Check 1"
            id="components-table--with-form-elements-select1"
            type="checkbox"
            value="2"
            checked
            name="components-table--with-form-elements-checkboxGroup"
          >
        </div>
      </td>
      <td>
        2.
      </td>
      <td>
        <div
          data-size="sm"
          style="width: 250px;"
        >
          <div>
            <input
              aria-label="Textfield 1-1"
              id="components-table--with-form-elements-textfield1-1"
              type="text"
              value="Har du opplevd mobbing?"
            >
          </div>
        </div>
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-2"
              id="components-table--with-form-elements-textfield1-2"
              type="text"
              value="Sjelden"
            >
          </div>
        </div>
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              cols="3"
              aria-label="Textfield 1-3"
              id="components-table--with-form-elements-textfield1-3"
              type="text"
              value="Ofte"
            >
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
